--- a/src/scss/pages/router/_footer.scss
+++ b/src/scss/pages/router/_footer.scss
@@ -53,6 +53,7 @@ footer {
         width: 100%;
         background-color: transparent;
         color: $bg-white;
+        outline: none;
       }
       p {
         font-size: 12px;
