--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -41,7 +41,8 @@
   }
 }
 .home-landing h1 {
-  font-size: 3rem;
+  line-height: 1.2;
+  font-size: 2.8rem;
   margin: 10px auto 30px;
 }
 @media (max-width: 767px) {
@@ -793,7 +794,7 @@ header nav {
 header nav .pc-nav > li > a {
   padding: 25px 20px;
   display: block;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
   transition: 0.3s;
   -webkit-transition: 0.3s;
@@ -838,7 +839,7 @@ header nav .pc-nav .pages-nav > li > a {
   padding: 0 15px 20px 10px;
   display: block;
   color: #343f52;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
 }
 header nav .pc-nav .pages-nav > li > a:hover {
@@ -900,7 +901,7 @@ header .right .menu-icon {
 .drawer .drawer-content ul > li > a {
   display: flex;
   text-transform: capitalize;
-  font-size: 17px;
+  font-size: 16px;
   font-weight: bold;
   padding: 6px 0;
   cursor: pointer;
@@ -1486,7 +1487,7 @@ footer .email {
 }
 .product-card .card-body h2 {
   color: #343f52;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -1552,7 +1553,7 @@ footer .email {
   }
 }
 .products-container .left h1 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   color: #343f52;
   margin-bottom: 8px;
 }
@@ -1560,7 +1561,7 @@ footer .email {
   padding-bottom: 10px;
   cursor: pointer;
   color: #343f52;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -1596,6 +1597,7 @@ footer .email {
   border-radius: 8px;
   padding: 8px 16px;
   color: #60697b;
+  font-size: 0.9rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
 }
 .price-inputs input:focus {
@@ -1604,8 +1606,10 @@ footer .email {
 
 #price-btn {
   margin-top: 20px;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: -moz-fit-content !important;
+  width: fit-content !important;
+  display: block;
+  font-size: 1rem;
   padding: 10px 20px;
   border-radius: 50px;
   background-color: #3f78e0;
@@ -1675,11 +1679,11 @@ footer .email {
 .prod-text h1 {
   color: #343f52;
   font-weight: bold;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
 }
 @media (max-width: 991px) {
   .prod-text h1 {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
 }
 .prod-text h2 {
@@ -1720,9 +1724,9 @@ footer .email {
   margin-bottom: 20px;
 }
 .prod-text .sizes li {
-  width: 45px;
-  height: 45px;
-  line-height: 45px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
   text-align: center;
   background-color: rgba(164, 174, 198, 0.2);
   border-radius: 8px;
@@ -2029,12 +2033,12 @@ footer .email {
 }
 
 .top-area .text h1 {
-  font-size: 1.9rem;
+  font-size: 1.7rem;
   font-weight: bold;
   color: #343f52;
 }
 .top-area .sorting select {
-  padding: 12px 20px;
+  padding: 10px 16px;
   border: 1px solid #f6f7f9;
   color: #60697b;
   border-radius: 6px;
@@ -2069,6 +2073,14 @@ footer .email {
 .cart-page {
   padding: 75px 15px 0;
   min-height: 80vh;
+}
+
+.empty-cart {
+  margin-top: 100px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  color: #343f52;
 }
 
 .cart-content {
@@ -2242,6 +2254,31 @@ footer .email {
   mix-blend-mode: difference;
   animation: loading 3s linear infinite;
   -webkit-animation: loading 3s linear infinite;
+}
+
+.table-popup {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #fefefe;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0.7;
+}
+.table-popup span {
+  display: block;
+  font-size: 1.5rem;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  opacity: 1;
+  font-weight: bold;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 
 @keyframes loading {
