--- a/src/scss/pages/Products/_filter.scss
+++ b/src/scss/pages/Products/_filter.scss
@@ -6,7 +6,7 @@
     }
 
     h1 {
-      font-size: 1.8rem;
+      font-size: 1.5rem;
       color: $heading-color;
       margin-bottom: 8px;
     }
@@ -14,7 +14,7 @@
       padding-bottom: 10px;
       cursor: pointer;
       color: $heading-color;
-      font-size: 1.1rem;
+      font-size: 0.9rem;
       transition: 0.3s;
       -webkit-transition: 0.3s;
       -moz-transition: 0.3s;
@@ -48,6 +48,7 @@
     border-radius: 8px;
     padding: 8px 16px;
     color: $dark-text;
+    font-size: 0.9rem;
     box-shadow: $box-shadow;
     &:focus {
       outline: none;
@@ -56,7 +57,9 @@
 }
 #price-btn {
   margin-top: 20px;
-  width: fit-content;
+  width: fit-content !important;
+  display: block;
+  font-size: 1rem;
   padding: 10px 20px;
   border-radius: 50px;
   background-color: $blue-btn-color;
