--- a/src/scss/pages/cart/_cart.scss
+++ b/src/scss/pages/cart/_cart.scss
@@ -3,7 +3,13 @@
   padding: 75px 15px 0;
   min-height: 80vh;
 }
-
+.empty-cart {
+  margin-top: 100px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  color: $heading-color;
+}
 .cart-content {
   padding: 80px 0;
   .table-scrol {
@@ -174,7 +180,30 @@
     }
   }
 }
-
+.table-popup {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: $primary-color;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0.7;
+  span {
+    display: block;
+    font-size: 1.5rem;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    opacity: 1;
+    font-weight: bold;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+  }
+}
 @keyframes loading {
   0% {
     left: 0;
