--- a/src/scss/pages/home/_landing-page.scss
+++ b/src/scss/pages/home/_landing-page.scss
@@ -11,11 +11,13 @@
     }
   }
   h1 {
+    line-height: 1.2;
+
     @media (max-width: 767px) {
       font-size: 2.5rem;
       padding: 0 6px;
     }
-    font-size: 3rem;
+    font-size: 2.8rem;
     margin: 10px auto 30px;
     span {
       position: relative;
