--- a/src/scss/fixed-component/_fixed-compenent.scss
+++ b/src/scss/fixed-component/_fixed-compenent.scss
@@ -98,3 +98,26 @@
     margin-bottom: 15px;
   }
 }
+.top-ele {
+  .container {
+    flex-wrap: wrap;
+  }
+  width: 100%;
+  background-color: $secondary-color;
+  padding: 20px 15px;
+  color: $heading-color;
+  .a {
+    text-decoration: underline;
+    &:hover {
+      color: $blue-btn-color;
+    }
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+  }
+  svg {
+    color: rgba(96, 105, 123, 0.35);
+  }
+}
