--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -143,7 +143,8 @@
 .more-about h2 {
   color: #343f52;
   font-weight: bold;
-  font-size: 1.9rem;
+  font-size: calc(1.6rem + 0.1vh);
+  line-height: 1.2;
   margin: 15px 0 6px;
 }
 .about h5,
@@ -1195,6 +1196,9 @@ footer .email {
   .solution .sol-2 {
     width: 65%;
   }
+}
+.solution .upper-sol-text h1 {
+  margin-bottom: 20px;
 }
 @media (min-width: 992px) {
   .solution .upper-sol-text,
@@ -2426,14 +2430,14 @@ footer .email {
   width: 48px;
 }
 .working-steps .container > h1 {
-  font-size: 2.2rem;
+  font-size: calc(2rem + 0.1vh);
+  line-height: 1.2;
   font-weight: bold;
   text-align: center;
-  max-width: 560px;
+  max-width: 600px;
   margin: auto;
-  line-height: 1.2;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   color: #343f52;
 }
 .working-steps .blue-btn {
@@ -2595,12 +2599,13 @@ footer .email {
   color: #36496d;
 }
 .about-save h1 {
-  margin: 30px auto 40px;
+  margin: 15px auto 40px;
   color: #343f52;
   max-width: 400px;
   text-align: center;
   font-weight: bold;
-  font-size: 2.2rem;
+  font-size: calc(2rem + 0.1vh);
+  line-height: 1.2;
 }
 .about-save .avater {
   width: 100px;
@@ -2678,7 +2683,7 @@ footer .email {
 }
 .upper-call h2 {
   color: #343f52;
-  font-size: 2.8rem;
+  font-size: calc(2.2rem + 0.1vh);
   margin-top: 15px;
   margin-bottom: 5px;
   font-weight: bold;
@@ -2730,7 +2735,8 @@ footer .email {
 }
 .lower-call .right > h2 {
   color: #343f52;
-  font-size: 2.2rem;
+  font-size: calc(2rem + 0.1vh);
+  line-height: 1.2;
   font-weight: bold;
 }
 .lower-call .right .call-ele svg {
@@ -3347,8 +3353,8 @@ footer .email {
 }
 .fixed-heading h1 {
   font-weight: bold;
-  font-size: 2rem;
-  max-width: 800px;
+  font-size: calc(1.8rem + 0.1vh);
+  max-width: 600px;
   margin: 0 auto 40px;
 }
 
@@ -3409,12 +3415,12 @@ footer .email {
 }
 
 .left-text h2 {
-  font-size: 2rem;
+  font-size: calc(1.7rem + 0.1vh);
   font-weight: bold;
   color: #343f52;
 }
 .left-text h3 {
-  font-size: 1.2rem;
+  font-size: calc(1.1rem + 0.1vh);
   color: #60697b;
   margin: 15px 0;
 }
@@ -3445,4 +3451,34 @@ footer .email {
 }
 .top-ele svg {
   color: rgba(96, 105, 123, 0.35);
+}
+
+.h-color {
+  color: #343f52;
+}
+
+.text-color {
+  color: #60697b;
+}
+
+.sub-h-color {
+  color: #aab0bc;
+}
+
+.f-lg {
+  font-size: calc(1.6rem + 0.1vh);
+  line-height: 1.2;
+  font-weight: bold;
+}
+
+.p-section {
+  padding: 80px 15px;
+}
+
+.lineal-stroke {
+  fill: #36496d;
+}
+
+.lineal-fill {
+  fill: #8caeec;
 }/*# sourceMappingURL=app.css.map */
