--- a/src/scss/pages/about/_about_call.scss
+++ b/src/scss/pages/about/_about_call.scss
@@ -20,7 +20,8 @@
   }
   h2 {
     color: $heading-color;
-    font-size: 2.8rem;
+    font-size: calc(2.2rem + 0.1vh);
+
     margin-top: 15px;
     margin-bottom: 5px;
     font-weight: bold;
@@ -72,7 +73,8 @@
     }
     > h2 {
       color: $heading-color;
-      font-size: 2.2rem;
+      font-size: calc(2rem + 0.1vh);
+      line-height: 1.2;
       font-weight: bold;
     }
     .call-ele {
