--- a/src/scss/pages/about/_about_save.scss
+++ b/src/scss/pages/about/_about_save.scss
@@ -10,12 +10,13 @@
     color: #36496d;
   }
   h1 {
-    margin: 30px auto 40px;
+    margin: 15px auto 40px;
     color: $heading-color;
     max-width: 400px;
     text-align: center;
     font-weight: bold;
-    font-size: 2.2rem;
+    font-size: calc(2rem + 0.1vh);
+    line-height: 1.2;
   }
   .avater {
     width: 100px;
