--- a/src/scss/pages/about/_working_steps.scss
+++ b/src/scss/pages/about/_working_steps.scss
@@ -32,14 +32,14 @@
       width: 48px;
     }
     h1 {
-      font-size: 2.2rem;
+      font-size: calc(2rem + 0.1vh);
+      line-height: 1.2;
       font-weight: bold;
       text-align: center;
-      max-width: 560px;
+      max-width: 600px;
       margin: auto;
-      line-height: 1.2;
       margin-top: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       color: $heading-color;
     }
   }
