--- a/src/scss/pages/home/_about.scss
+++ b/src/scss/pages/home/_about.scss
@@ -12,7 +12,8 @@
   h2 {
     color: $heading-color;
     font-weight: bold;
-    font-size: 1.9rem;
+    font-size: calc(1.6rem + 0.1vh);
+    line-height: 1.2;
     margin: 15px 0 6px;
   }
   h5 {
