--- a/src/scss/pages/home/_chose-us.scss
+++ b/src/scss/pages/home/_chose-us.scss
@@ -27,7 +27,7 @@
     padding: 20px 16px 20px 24px;
     display: flex;
     align-items: center;
-
+    cursor: pointer;
     &:hover,
     &.active {
       background-color: $bg-white;
